# crime-map

./: .dockerignore  .env  .gitignore  AGENTS.md  Cargo.toml  DEPLOY.md  Dockerfile  GEOCODER.md  README.md  deny.toml  docker-compose.yml  flake.nix  fly.toml
.cargo/: config.toml
.github/actions/setup-pipeline/: action.yml
.github/workflows/: build-and-test.yml  build-geocoder-index.yml  data-pipeline.yml  deploy-app.yml  deploy-data.yml  deploy-infra.yml  frontend.yml  merge-data.yml  verify-geocoder-index.yml
.opencode/commands/: ai-conversation-audit.md  discover-status.md  discover.md
.opencode/skills/ai-conversation-audit/: SKILL.md
.opencode/skills/source-discovery/: SKILL.md
app/: index.html  package.json  tsconfig.app.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/ai/: AiChat.tsx
app/src/components/filters/: BoundaryFilter.tsx  FilterPanel.tsx
app/src/components/map/: BoundaryLayers.tsx  CrimeMap.tsx  LayerToggle.tsx  ThemeToggle.tsx
app/src/components/sidebar/: IncidentSidebar.tsx  SidebarPanel.tsx  SourcesPanel.tsx
app/src/components/ui/: map.tsx
app/src/hooks/: useAiChat.ts  useBoundaryCounts.ts  useFilters.ts  useLayers.ts  useSources.ts  useTheme.ts
app/src/lib/: boundary-params.ts  map-config.ts  types.ts
app/src/lib/cluster-worker/: index.ts  types.ts  worker.ts
app/src/lib/clusters/: types.ts  useClusters.ts
app/src/lib/filters/: predicates.ts
app/src/lib/hexbins/: types.ts  useHexbins.ts
app/src/lib/map-filters/: expressions.ts
app/src/lib/sidebar/: types.ts  useSidebar.ts
app/src/lib/source-counts/: useSourceCounts.ts
config/: clusters.json  hexbins.json
data/: discovery.db
infra/: .gitignore  cloud-init.yaml  main.tf  network.tf  outputs.tf  terraform.tfvars.example
infra/deploy/: cloudflare.tf  fly.tf  main.tf  outputs.tf  pelias.tf  terraform.tfvars.example  variables.tf
infra/pelias/: .env.example  README.md  compute.tf  docker-compose.yml  import.sh  pelias.json  variables.tf
migrations/002_create_sources/: up.sql
migrations/003_create_categories/: up.sql
migrations/004_create_incidents/: up.sql
migrations/005_create_county_stats/: up.sql
migrations/006_add_fully_synced/: down.sql  up.sql
migrations/007_create_census_tracts/: up.sql
migrations/008_create_neighborhoods/: up.sql
migrations/009_create_census_places/: down.sql  up.sql
migrations/010_add_spatial_attribution/: down.sql  up.sql
migrations/011_add_analytics_indexes/: down.sql  up.sql
migrations/011_create_geocode_cache/: up.sql
migrations/012_add_composite_analytics_indexes/: down.sql  up.sql
migrations/013_denormalize_parent_category/: down.sql  up.sql
migrations/014_composite_city_analytics_index/: up.sql
migrations/015_add_portal_url/: down.sql  up.sql
migrations/016_create_census_counties/: down.sql  up.sql
migrations/017_create_census_states/: down.sql  up.sql
migrations/018_nullable_occurred_at/: down.sql  up.sql
migrations/019_attribution_indexes/: down.sql  up.sql
scripts/: deploy.sh
